--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "repository": "https://github.com/Parttime-Working/building-manage-api.git",
   "author": "Aoi <19519928+AoiYamada@users.noreply.github.com>,jjasoncool",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./src/server",
+    "start:dev": "nodemon ./src/server",
+    "start:dev:debug": "nodemon --inspect ./src/server",
+    "start:docker": "docker-compose up -d",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
+  },
   "dependencies": {
     "@koa/cors": "3.1.0",
     "bcrypt": "5.0.0",
@@ -31,5 +39,16 @@
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -e $GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
   }
 }
