--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 
 NODE_ENV=local
 PORT=3000
-MONGODB_DEBUG=TRUE
+MONGODB_DEBUG=true
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_NAME=building-management
