--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@koa/cors": "3.1.0",
-    "bcrypt": "5.0.0",
+    "bcrypt": "^5.0.0",
     "dotenv": "8.2.0",
     "joi": "17.3.0",
     "koa": "2.13.0",
