--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-compress": "5.0.1",
     "koa-helmet": "6.0.0",
     "koa-router": "10.0.0",
+    "koa-static": "^5.0.0",
     "mongoose": "5.11.8",
     "mongoose-sequence": "5.3.0",
     "passport": "0.4.1",
