--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "koa-body": "4.2.0",
     "koa-compress": "5.0.1",
     "koa-helmet": "6.0.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "10.0.0",
+    "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
     "mongoose": "5.11.8",
     "mongoose-sequence": "5.3.0",
     "passport": "0.4.1",
+    "passport-local": "^1.0.0",
     "ramda": "0.27.1",
     "zlib": "1.0.5"
   },
